methods.picture.PatternPicture.scala.error
Erreur de compilation :
PatternPicture:52: error: not found: value motif3
  motif3(c : Color) {
  ^PatternPicture:52: error: not found: value c
  motif3(c : Color) {
         ^PatternPicture:61: error: not found: value c
    setCouleurBrosse(c);
                     ^PatternPicture:76: error: not found: value motif3
   motif3(Color.YELLOW)
   ^